# wgpu-paper

./: Cargo.toml  README.md
example_shaders/: waves.wgsl
src/: audio.rs  main.rs  paper.rs  shader.wgsl  wgpu_layer.rs
