[package]
name = "wgpu-paper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
pollster = "0.3.0"
rand = "0.8.5"
raw-window-handle = "0.5.2"
smithay-client-toolkit = "0.17.0"
wayland-client = "0.30.2"
wayland-egl = "0.30.0"
wayland-protocols = { version = "0.30.0", features = ["client", "unstable"] }
wgpu = { version = "0.16.1", features = ["glsl"] }

